beautifying buttons and tables

--- a/application/views/scripts/case/list.phtml
+++ b/application/views/scripts/case/list.phtml
@@ -19,4 +19,6 @@
   </tr>
   <?php endforeach; ?>
 </table>
-  <a href="/case/create"><?php echo $this->translate("Create a case"); ?></a>
+<div class="smork-btn create-case-icon">
+  <a href="/case/create"><span><?php echo $this->translate("Create a new case"); ?></span></a>
+</div>
