--- a/application/views/scripts/simtext/index.phtml
+++ b/application/views/scripts/simtext/index.phtml
@@ -36,6 +36,6 @@
 //$data["content"] = file_get_content($report_path);
   //$lines = explode('<br />',$content);
 ?>
-<p>
-<a href="/simtext/compare"><?php echo $this->translate("Compare"); ?></a>
-</p>
+<div class="smork-btn simtext-compare-icon">
+  <a href="/simtext/compare"><span><?php echo $this->translate("Compare"); ?></span></a>
+</div>
