--- a/application/views/scripts/file/list.phtml
+++ b/application/views/scripts/file/list.phtml
@@ -1,6 +1,6 @@
 <?php
-    $this->title = $this->translate("List of uploaded files");
-    $this->headTitle($this->title);
+$this->title = $this->translate("List of uploaded files");
+$this->headTitle($this->title);
 ?>
 <table cellpadding="0" cellspacing="0" class="default"> 
   <tr>
@@ -8,23 +8,25 @@
     <th style="width: 110px;"><?php echo $this->translate("Size"); ?></th>
     <th style="width: 100px;"><?php echo $this->translate("Actions"); ?></th>
   </tr>
-  <?php 
+  <?php
   $i = 0;
-  foreach($this->listFiles as $file): 
+  foreach($this->listFiles as $file):
     ?>
-  <tr <?php echo ($i++ %2 == 0) ? "class=\"even\"" : ""; ?>>
-    <td><a href="<?php echo $this->baseUrl('/file/download/id/' . $file->getId()); ?>"><?php echo $file->getFilename(); ?></a></td>
-    <td><?php echo $file->getSize(); ?></td>
-    <td><?php if($file->getIsTarget()) { ?>
-            <a href="<?php echo "/file/unset-target/id/" . $file->getId(); ?>"><img class="icon" src="<?php echo $this->baseUrl('images/icons/page_find.png'); ?>" title="<?php echo $this->translate("unset target"); ?>" /></a>
-          <?php } else { ?>
-            <a href="<?php echo "/file/set-target/id/" . $file->getId(); ?>"><img class="icon" src="<?php echo $this->baseUrl('images/icons/page.png'); ?>" title="<?php echo $this->translate("set target"); ?>" /></a>
-          <?php } ?> 
-            <a href="<?php echo "/file/parse/id/" . $file->getId(); ?>"><img class="icon" src="<?php echo $this->baseUrl('images/icons/page_gear.png'); ?>" title="<?php echo $this->translate("parse"); ?>" /></a>
-            <a href="<?php echo "/file/download/id/" . $file->getId(); ?>"><img class="icon" src="<?php echo $this->baseUrl('images/icons/disk.png'); ?>" title="<?php echo $this->translate("download"); ?>" /></a>
-            <a href="<?php echo "/file/delete/id/" . $file->getId(); ?>"><img class="icon" src="<?php echo $this->baseUrl('images/icons/delete.png'); ?>" title="<?php echo $this->translate("delete"); ?>" /></a>
-</td>
-  </tr>
+    <tr <?php echo ($i++ % 2 == 0) ? "class=\"even\"" : ""; ?>>
+      <td><a href="<?php echo $this->baseUrl('/file/download/id/' . $file->getId()); ?>"><?php echo $file->getFilename(); ?></a></td>
+      <td><?php echo $file->getSize(); ?></td>
+      <td><?php if($file->getIsTarget()){ ?>
+          <a href="<?php echo "/file/unset-target/id/" . $file->getId(); ?>"><img class="icon" src="<?php echo $this->baseUrl('images/icons/page_find.png'); ?>" title="<?php echo $this->translate("unset target"); ?>" /></a>
+        <?php }else{ ?>
+          <a href="<?php echo "/file/set-target/id/" . $file->getId(); ?>"><img class="icon" src="<?php echo $this->baseUrl('images/icons/page.png'); ?>" title="<?php echo $this->translate("set target"); ?>" /></a>
+        <?php } ?> 
+        <a href="<?php echo "/file/parse/id/" . $file->getId(); ?>"><img class="icon" src="<?php echo $this->baseUrl('images/icons/page_gear.png'); ?>" title="<?php echo $this->translate("parse"); ?>" /></a>
+        <a href="<?php echo "/file/download/id/" . $file->getId(); ?>"><img class="icon" src="<?php echo $this->baseUrl('images/icons/disk.png'); ?>" title="<?php echo $this->translate("download"); ?>" /></a>
+        <a href="<?php echo "/file/delete/id/" . $file->getId(); ?>"><img class="icon" src="<?php echo $this->baseUrl('images/icons/delete.png'); ?>" title="<?php echo $this->translate("delete"); ?>" /></a>
+      </td>
+    </tr>
   <?php endforeach; ?>
 </table>
-  <a href="/file/upload"><?php echo $this->translate("Upload a file"); ?></a>
+<div class="smork-btn upload-icon">
+  <a href="/file/upload"><span><?php echo $this->translate("Upload a file"); ?></span></a>
+</div>
