Some minor fixes

--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,8 +1,7 @@
 <?php
-    $this->title = $this->translate("Welcome");
+    $this->title = $this->translate("Welcome") . ',';
     $this->headTitle($this->title);
 ?>
 
-<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean 
-  massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec 
-  quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.</p>
+<p><?php echo $this->translate("to Unplagged. This web-based software offers you a simple, collaborative approach to 
+search and document plagiarism in scientific papers.");?></p>
