adds ajax pagination to all tables, beautifies submenu in main navigation and cleanup of navigation init

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -14,7 +14,7 @@ $flashMessenger->clearCurrentMessages();
 <div id="content" class="clearfix">
 
   <div class="main">
-
+  <div id="main-wrapper">
     <div id="main">
       <h2><?php echo $this->escape($this->title); ?></h2>
       <?php
@@ -31,6 +31,7 @@ $flashMessenger->clearCurrentMessages();
       echo $this->layout()->content;
       ?>
     </div>
+  </div>
   </div>
   <nav id="right-nav">
     <h4>Aktuelles und Kontroverses</h4>
