--- a/application/layouts/scripts/partials/header.phtml
+++ b/application/layouts/scripts/partials/header.phtml
@@ -17,6 +17,8 @@
     <script defer src="<?php echo $this->baseUrl('/js/plugins.js'); ?>"></script>
     <script defer src="<?php echo $this->baseUrl('/js/script.js'); ?>"></script>
     <script defer src="<?php echo $this->baseUrl('/js/libs/jquery-ui-1.8.17.custom.min.js'); ?>"></script>
+    <script defer src="<?php echo $this->baseUrl('/js/libs/jquery.ba-hashchange.min.js'); ?>"></script>
+    
       <!--[if lt IE 7]>
   <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
   <script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
@@ -53,21 +55,5 @@
     <div id="page">
       <header id="header" class="clearfix">
         <h1 class="ir">Unplagged - Plagiarism Detection Cockpit</h1>
-        <?php
-        $container = $this->navigation()->getContainer();
-
-        if(Zend_Auth::getInstance()->hasIdentity()){
-          $container->addPage(array(
-            'label'=>'Edit profile',
-            'title'=>'Edit profile',
-            'module'=>'default',
-            'controller'=>'user',
-            'action'=>'edit',
-            'params'=>array(
-              'id'=>$this->me->getId()
-            )
-          ));
-        }
-        ?>
         <?php echo $this->navigation()->menu(); ?>
       </header>
