fixes the bug with titles on pages not shown anymore

--- a/application/layouts/scripts/partials/header.phtml
+++ b/application/layouts/scripts/partials/header.phtml
@@ -56,4 +56,4 @@
       <header id="header" class="clearfix">
         <h1 class="ir">Unplagged - Plagiarism Detection Cockpit</h1>
         <?php echo $this->navigation()->menu(); ?>
-      </header>
+      </header><?php echo $this->escape($this->title); ?>
