--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -6,9 +6,7 @@ if($defaultNamespace->userId){
 }else{
   $me = null;
 }
-$flashMessenger = Zend_Controller_Action_HelperBroker::getExistingHelper('FlashMessenger');
-$messages = $flashMessenger->getMessages();
-$flashMessenger->clearCurrentMessages();
+
 ?>
 <?php echo $this->partial('partials/header.phtml', array('defaultNamespace'=>$defaultNamespace, 'me'=>$me)); ?>
 <div id="content" class="clearfix">
@@ -18,10 +16,10 @@ $flashMessenger->clearCurrentMessages();
     <div id="main">
       <h2><?php echo $this->escape($this->title); ?></h2>
       <?php
-      if(!empty($messages)){
+      if(!empty($this->flashMessages)){
         echo '<div class="flash-messages">';
         //@todo maybe switch to ul?
-        foreach($messages as $key=>$value){
+        foreach($this->flashMessages as $key=>$value){
           echo $this->translate($value) . "<br />";
         }
         echo '</div>';
