--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -872,8 +872,8 @@ smork-btn a:active { top: 1px; }
   background-color: #f7f6f6;
   border: 1px #f3f2f2 solid;
   margin: 0 3px 0 0;
-  padding: 3px 10px 3px 10px;
-  height: 18px;
+  padding: 2px 7px 2px 7px;
+  height: 15px;
   display: block;
 }
 #content ul.pagination li a.numbers {
@@ -893,7 +893,7 @@ smork-btn a:active { top: 1px; }
 }
 
 #content ul.pagination li a.active {
-  background-color: #40C0E9;
+  background-color: #484c51;
   color: #ffffff;
 }
 
