--- a/application/layouts/scripts/partials/header.phtml
+++ b/application/layouts/scripts/partials/header.phtml
@@ -4,25 +4,37 @@
 <!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
   <head>
+      
     <?php echo $this->headMeta(); ?>
+        
     <?php
     echo $this->headLink()
         ->prependStylesheet($this->baseUrl() . '/style/styles.css')
         ->appendStylesheet($this->baseUrl() . '/style/flick/jquery-ui-1.8.17.custom.css');
+  // $this->headScript()->appendFile($this->baseUrl() .'/js/ctest.js');
+           // <?$this->headScript()->appendFile('/js/ctest.js')
     ?>
     <meta name="viewport" content="width=device-width,initial-scale=1">
+  
     <script src="<?php echo $this->baseUrl('/js/libs/modernizr-2.0.6.min.js'); ?>"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="<?php echo $this->baseUrl('/js/libs/jquery-1.7.1.min.js'); ?>"><\/script>')</script>
-    <script defer src="<?php echo $this->baseUrl('/js/plugins.js'); ?>"></script>
+    <script src="<?php echo $this->baseUrl('/js/ctest.js'); ?>"></script>
     <script defer src="<?php echo $this->baseUrl('/js/script.js'); ?>"></script>
+
     <script defer src="<?php echo $this->baseUrl('/js/libs/jquery-ui-1.8.17.custom.min.js'); ?>"></script>
+     
+
+
+ 
       <!--[if lt IE 7]>
   <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
   <script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
   <![endif]-->
-  </head>
+      
+ </head>
   <body>
+   
     <?php
     ?>
     <header id="main-header">
@@ -69,5 +81,7 @@
           ));
         }
         ?>
+      
         <?php echo $this->navigation()->menu(); ?>
+        
       </header>
