--- a/application/views/scripts/googlesearch/index.phtml
+++ b/application/views/scripts/googlesearch/index.phtml
@@ -1,26 +1,4 @@
 <?php 
+   //echo $this->searchForm;
 ?>
-<ul id="myMenu" class="contextMenu">
-    <li class="google search multipl">
-        <a href="#search">Search</a>
-    </li>
-    <li class="edit">
-        <a href="#edit">Edit</a>
-    </li>
-    <li class="cut separator">
-        <a href="#cut">Cut</a>
-    </li>
-    <li class="copy">
-        <a href="#copy">Copy</a>
-    </li>
-    <li class="paste">
-        <a href="#paste">Paste</a>
-    </li>
-    <li class="delete">
-        <a href="#delete">Delete</a>
-    </li>
-    <li class="quit separator">
-        <a href="#quit">Quit</a>
-    </li>
-</ul>
 
