--- a/application/layouts/scripts/partials/header.phtml
+++ b/application/layouts/scripts/partials/header.phtml
@@ -12,21 +12,15 @@
     ?>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <script src="<?php echo $this->baseUrl('/js/libs/modernizr-2.0.6.min.js'); ?>"></script>
+    
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="<?php echo $this->baseUrl('/js/libs/jquery-1.7.1.min.js'); ?>"><\/script>')</script>
     <script defer src="<?php echo $this->baseUrl('/js/plugins.js'); ?>"></script>
     <script defer src="<?php echo $this->baseUrl('/js/script.js'); ?>"></script>
     <script defer src="<?php echo $this->baseUrl('/js/libs/jquery-ui-1.8.17.custom.min.js'); ?>"></script>
     <script defer src="<?php echo $this->baseUrl('/js/libs/jquery.ba-hashchange.min.js'); ?>"></script>
-    
-      <!--[if lt IE 7]>
-<script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.3/CFInstall.min.js"></script>
-<script>window.attachEvent('onload',function(){CFInstall.check({mode:'overlay'})})</script>
-<![endif]-->
   </head>
   <body>
-    <?php
-    ?>
     <header id="main-header">
       <div id="settings-panel">
         <div class="content">
@@ -37,23 +31,25 @@
               <a href="/auth/logout"><?php echo $this->translate("Logout"); ?></a>
             </div>
             <div id="settings">
-              <?php echo $this->translate("Case you're working on"); ?> <div id="current-case-field"><input type="text" name="current-case" id="current-case" <?php if($this->me->getCurrentCase() instanceof Application_Model_Case) { echo " value=\"" . $this->me->getCurrentCase()->getAlias() . "\""; } ?> /><a href="#" title="<?php echo $this->translate("Unset current case"); ?>" class="clear">x</a></div>
-              <a href="/case/list"><?php echo $this->translate("Case Settings"); ?></a><?php /*<img src="/images/tmp_top_icons.png" /> */ ?>
+              <?php echo $this->translate("Case you're working on"); ?> <div id="current-case-field"><input type="text" name="current-case" id="current-case" <?php if($this->me->getCurrentCase() instanceof Application_Model_Case){
+              echo " value=\"" . $this->me->getCurrentCase()->getAlias() . "\"";
+            } ?> /><a href="#" title="<?php echo $this->translate("Unset current case"); ?>" class="clear">x</a></div>
+              <a href="/case/list"><?php echo $this->translate("Case Settings"); ?></a><?php /* <img src="/images/tmp_top_icons.png" /> */ ?>
             </div>
-          <?php else: ?>
+            <?php else: ?>
             <div id="login-actions">
               <?php echo $this->translate("You are not logged in."); ?>
               <a href="/user/register"><?php echo $this->translate("Register now"); ?></a>
-              <?php echo $this->translate('or'); ?> <a href="/auth/login"><?php echo $this->translate("Login"); ?></a>
+            <?php echo $this->translate('or') . ' '; ?><a href="/auth/login"><?php echo $this->translate("Login"); ?></a>
             </div>
           <?php endif; ?>
-            <div style="clear: both"></div>
+          <div style="clear: both"></div>
         </div>
         <span id="dropdown-button" class="arrow-up"></span>
       </div>
     </header>
     <div id="page">
       <header id="header" class="clearfix">
-        <h1 class="ir">Unplagged - Plagiarism Detection Cockpit</h1>
+        <h1 class="ir">Unplagged - The Plagiarism Detection Cockpit</h1>
         <?php echo $this->navigation()->menu(); ?>
       </header><?php echo $this->escape($this->title); ?>
