--- a/application/layouts/scripts/partials/header.phtml
+++ b/application/layouts/scripts/partials/header.phtml
@@ -8,7 +8,8 @@
     <?php
     echo $this->headLink()
         ->prependStylesheet($this->baseUrl() . '/style/styles.css')
-        ->appendStylesheet($this->baseUrl() . '/style/flick/jquery-ui-1.8.17.custom.css');
+        ->appendStylesheet($this->baseUrl() . '/style/flick/jquery-ui-1.8.17.custom.css')
+        ->appendStylesheet($this->baseUrl() . '/js/libs/css/jquery.lightbox-0.5.css');
     ?>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <script src="<?php echo $this->baseUrl('/js/libs/modernizr-2.0.6.min.js'); ?>"></script>
@@ -20,14 +21,16 @@
     <script defer src="<?php echo $this->baseUrl('/js/contextmenu.js'); ?>"></script>
     <script defer src="<?php echo $this->baseUrl('/js/libs/jquery-ui-1.8.17.custom.min.js'); ?>"></script>
     <script defer src="<?php echo $this->baseUrl('/js/libs/jquery.ba-hashchange.min.js'); ?>"></script>
+    <script defer src="<?php echo $this->baseUrl('/js/libs/js/jquery.js'); ?>"></script>
+    <script defer src="<?php echo $this->baseUrl('/js/libs/js/jquery.lightbox-0.5.js'); ?>"></script>
+    <script defer src="<?php echo $this->baseUrl('/js/pictureview.js'); ?>"></script>
   </head>
   <body>
       <div id='contextmenu' style='display:none;position:absolute;top:-250;left:0;z-index:100;color:black'>
         <table cellpadding='5' cellspacing='0' style='background-color:#40bfe8'>
-        <tr><td><a class='menu' href='javascript:history.back()'> Zurück </a></td></tr>
-        <tr><td><a class='menu' href='javascript:history.forward()'> Vorwärts </a></td></tr>
-        <tr><td><hr class='menu'><a class='menu' href='javascript:location.reload()'> Aktualisieren </a></td></tr>
-        <tr><td><a class='menu' href='javascript:print()'> Drucken </a></td></tr>
+        <tr><td><hr class='menu'><a class='menu' href='javascript:copyToClipboard(document.getElementById("body").innerHTML)'> Kopieren </a></td></tr>
+        <tr><td><a class='menu' href='javascript:markAll()'> Alles markieren </a></td></tr>
+          <tr><td><a class='menu' href='javascript:deleteSearchWords()'> Google-Suchwörter löschen </a></td></tr>
            <tr><td><a id='googleSearch' class='menu' href='javascript:googleSearch()'> Google Suche </a></td></tr>
         </table>
         </div>
@@ -35,7 +38,7 @@
       <div id="settings-panel">
         <div class="content">
           <?php if(Zend_Auth::getInstance()->hasIdentity()): ?>
-            <div id="avatar"><img src="/images/tmp_avatar.png" /></div>
+            <div id="avatar"><img src="<?php echo $this->baseUrl('/image/view/id/' . $this->me->getAvatarfilepath()); ?>" /></div>
             <div id="logout-actions">
               <?php echo $this->translate("Welcome") . " " . $this->me->getUsername() . "!"; ?>
               <a href="/auth/logout"><?php echo $this->translate("Logout"); ?></a>
